# waydotool

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
waydotool/: __init__.py  clipboard.py  input.py  screen.py  utils.py  window.py
waydotool/libs/: evdev.py  kdotool.py  spectacle.py  ydotool.py
